# google-images-downloader

./: .gitignore  .travis.yml  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini  travis.yml  upload_pypi.sh  web.html
.github/: workflows
.github/workflows/: build.yml  coverage.yml  python-app.yml  test.yml  tests.yml
gid/: main.py
google_images_downloader/: __init__.py  __main__.py  __version__.py  arguments_helper.py  gid.py  google_images_downloader.py  main.py
google_images_downloader/helpers/: __init__.py  arguments_helper.py
google_images_downloader/tests/: test_arguments_helper.py  test_browser.py  test_download.py  test_main.py
